--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,4 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
-lib_deps = 
-	adafruit/Adafruit SSD1306@^2.5.13
-	adafruit/DHT sensor library@^1.4.6
+lib_deps = adafruit/Adafruit SSD1306@^2.5.13
