--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,6 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
-lib_deps = adafruit/Adafruit SSD1306@^2.5.13
+lib_deps = 
+	adafruit/Adafruit SSD1306@^2.5.13
+	bblanchon/ArduinoJson@^7.4.1
